مرکز سنجش آموزش پزشکی.htm

--- a/1/مرکز سنجش آموزش پزشکی.htm
+++ b/1/مرکز سنجش آموزش پزشکی.htm
@@ -556,7 +556,7 @@ function __doPostBack(eventTarget, eventArgument) {
 </td>
 </tr><tr>
 <td align="right">
-<a href="https://amhohe-a11y.github.io/grades/2/http___dashtyar.sanjeshp.ir_41.html" id="ctl00_ContentPlaceHolder1_gwPezeshkiTakhasosDastyarSetting_ctl05_btnLink" style="Color:Blue">دریافت کارنامه علمی - مشاهده پاسخنامه </a>
+<a href="https://amhohe-a11y.github.io/grades/2/2.html" id="ctl00_ContentPlaceHolder1_gwPezeshkiTakhasosDastyarSetting_ctl05_btnLink" style="Color:Blue">دریافت کارنامه علمی - مشاهده پاسخنامه </a>
 </td>
 </tr>
 </tbody></table>
