--- a/2/2.html
+++ b/2/2.html
@@ -81,7 +81,7 @@ function __doPostBack(eventTarget, eventArgument) {
 		</legend>
 <table class="auto-style10" id="CPH1_ItemList">
 <tbody><tr>
-<td><input id="CPH1_ItemList_0" name="ctl00$CPH1$ItemList" onclick="window.location.href='file:///C:/Users/Amir%20Hossein/Desktop/grade/3/http___dashtyar.sanjeshp.ir_41.html'" type="radio" value="100"/><label for="CPH1_ItemList_0">دریافت رمز عبور یکبار مصرف </label></td>
+<td><input id="CPH1_ItemList_0" name="ctl00$CPH1$ItemList" onclick="window.location.href='https://amhohe-a11y.github.io/grades/3/3.html'" type="radio" value="100"/><label for="CPH1_ItemList_0">دریافت رمز عبور یکبار مصرف </label></td>
 </tr><tr>
 <td><input id="CPH1_ItemList_1" name="ctl00$CPH1$ItemList" onclick="javascript:setTimeout('__doPostBack(\'ctl00$CPH1$ItemList$1\',\'\')', 0)" type="radio" value="200"/><label for="CPH1_ItemList_1">ورود با کد رهگیری ثبت نام (داوطلبانی  که مشکل دریافت پیامک دارند فقط از طریق سامانه پاسخگویی اینترنتی مکاتبه نمایند)</label></td>
 </tr>
