--- a/3/3.html
+++ b/3/3.html
@@ -100,7 +100,7 @@ function __doPostBack(eventTarget, eventArgument) {
 		</legend>
 <table class="LBL_Farsi" id="CPH1_RadioButtonList1">
 <tbody><tr>
-<td><span style="Color:Blue"><input id="CPH1_RadioButtonList1_0" name="ctl00$CPH1$RadioButtonList1" onclick="window.location.href='file:///C:/Users/Amir%20Hossein/Desktop/grade/4/www.sanjeshp.ir.html'" type="radio" value="120"/><label for="CPH1_RadioButtonList1_0">دریافت کارنامه علمی - مشاهده پاسخنامه</label></span></td>
+<td><span style="Color:Blue"><input id="CPH1_RadioButtonList1_0" name="ctl00$CPH1$RadioButtonList1" onclick="window.location.href='https://amhohe-a11y.github.io/grades/4/4.html'" type="radio" value="120"/><label for="CPH1_RadioButtonList1_0">دریافت کارنامه علمی - مشاهده پاسخنامه</label></span></td>
 </tr><tr>
 <td><span style="Color:Blue"><input id="CPH1_RadioButtonList1_1" name="ctl00$CPH1$RadioButtonList1" onclick="javascript:setTimeout('__doPostBack(\'ctl00$CPH1$RadioButtonList1$1\',\'\')', 0)" type="radio" value="111"/><label for="CPH1_RadioButtonList1_1">نتیجه آزمون مرحله اصلی<label style="color:green;">(به علت محدودیت ورود به سیستم، لطفا تا پایان مهلت ارسال پیامک منتظر بمانید)</label></label></span></td>
 </tr>
