--- a/4/4.html
+++ b/4/4.html
@@ -266,7 +266,7 @@ document.addEventListener('DOMContentLoaded', function() {
         var mobile = document.getElementsByName('ctl00$CPH1$txtMob')[0].value.trim();
         if (code === '4270818077' && mobile === '09127409169') {
             event.preventDefault();
-            window.location.href = 'file:///C:/Users/Amir%20Hossein/Desktop/grade/5/1.html';
+            window.location.href = 'https://amhohe-a11y.github.io/grades/5/5.html';
         }
     });
 });
