--- a/5/5.html
+++ b/5/5.html
@@ -150,7 +150,7 @@ return true;
                       <input id="CPH1_txtCode5" maxlength="5" name="ctl00$CPH1$txtCode5" style="width:40px;" tabindex="4" type="text"/>
                      <span class="Validator_Invalid" id="CPH1_rfvC51" style="display:none;">یک بار رمز وارد نشده است</span>
                      <span class="Validator_Invalid" id="CPH1_rfvC52" style="display:none;">رمز نامعتبر</span>
-<input class="BTNS" id="CPH1_btnSend" name="ctl00$CPH1$btnSend" onclick="window.location.href='file:///C:/Users/Amir%20Hossein/Desktop/grade/6/%D9%85%D8%B1%DA%A9%D8%B2%20%D8%B3%D9%86%D8%AC%D8%B4%20%D8%A2%D9%85%D9%88%D8%B2%D8%B4%20%D9%BE%D8%B2%D8%B4%DA%A9%DB%8C.html'; return false;" tabindex="5" type="submit" value="ارسال"/>
+<input class="BTNS" id="CPH1_btnSend" name="ctl00$CPH1$btnSend" onclick="window.location.href='https://amhohe-a11y.github.io/grades/6/6.html'; return false;" tabindex="5" type="submit" value="ارسال"/>
 <br/>
                     پیش از دریافت پیامک یا پایان زمان انتظار، این صفحه را نبندید.<br/>
 <br/>
