--- a/first/first.html
+++ b/first/first.html
@@ -1124,7 +1124,7 @@ function __doPostBack(eventTarget, eventArgument) {
                                                         </li>
                                                         <li id="dastyaripezeshkitakhasos">
                                                             <a href="https://sanjeshp.ir/Content.aspx?click=12" id="vTakhasosDastyari">
-                                                                <span id="ctl00_lblPezeshkiTakhasosDastyari" style="cursor: pointer; onclick='https://amhohe-a11y.github.io/grades/1/1.html'>دستیاری تخصصی پزشکی</span>
+                                                                <span id="ctl00_lblPezeshkiTakhasosDastyari" style="cursor: pointer; onclick="window.location.href='https://amhohe-a11y.github.io/grades/1/1.html'"
                                                             </a>
                                                         </li>
                                                         <li id="dastyaripezeshkifoghtakhsos">
